--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -6,7 +6,7 @@
     <!--{% for job in jobs.all %}-->
     <!--<h1>{{job.summary}}</h1>-->
     <!--{% endfor %}-->
-    <!---->
+  <!---->
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -50,8 +50,6 @@
       }
 
 
-
-
     </style>
 
 
@@ -59,26 +57,6 @@
 <body>
 
 <header>
-    <!--<div class="collapse bg-dark" id="navbarHeader">-->
-        <!--<div class="container">-->
-            <!--<div class="row">-->
-                <!--<div class="col-sm-8 col-md-7 py-4">-->
-                    <!--<h4 class="text-white">About</h4>-->
-                    <!--<p class="text-muted">Add some information about the album below, the author, or any other-->
-                        <!--background context. Make it a few sentences long so folks can pick up some informative tidbits.-->
-                        <!--Then, link them off to some social networking sites or contact information.</p>-->
-                <!--</div>-->
-                <!--<div class="col-sm-4 offset-md-1 py-4">-->
-                    <!--<h4 class="text-white">Contact</h4>-->
-                    <!--<ul class="list-unstyled">-->
-                        <!--<li><a href="#" class="text-white">Follow on Twitter</a></li>-->
-                        <!--<li><a href="#" class="text-white">Like on Facebook</a></li>-->
-                        <!--<li><a href="#" class="text-white">Email me</a></li>-->
-                    <!--</ul>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -97,7 +75,7 @@
                         <a class="nav-link" href="https://www.linkedin.com/in/madhur-chhajed/">Linkedin</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
+                        <a class="nav-link active" href="{% url 'allblogs' %}">Blog</a>
                     </li>
                     <!--<li class="nav-item">-->
                     <!--<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
@@ -114,11 +92,7 @@
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Hi I'm Madhur Chhajed</h1>
-                <p class="lead text-muted"> Hey this is practice portfolio web app using Django </p>
-                <p>
-                    <a href="mailto:madhurchhajed@gmail.com" class="btn btn-primary my-2">Email Me</a>
-                </p>
-                    <img src="{% static 'Madhur_Chhajed.jpg' %}"  height="150"/>
+                <p class="lead text-muted"> This is my Blog section, check out my latest blogs</p>
             </div>
         </div>
     </section>
@@ -128,20 +102,23 @@
         <div class="container">
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                {% for job in jobs.all %}
+                {% for blog in blogs.all %}
                 <div class="col">
                     <div class="card shadow-sm">
                         <!--<svg class="bd-placeholder-img card-img-top" width="100%" height="225"  role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"></svg>-->
-                        <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="{{job.image.url}}"/>
+                        <img class = "bd-placeholder-img card-img-top" width="100%" height="225" src = "{{blog.image.url}}" />
                         <div class="card-body">
-                            <p class="card-text"> {{ job.summary }} </p>
+                            <!--<p class="card-text"> {{ blog.title}} </p>-->
+                            <a class="card-text" href="{% url 'detail' blog.id %}">{{ blog.title}} </a>
                             <div class="d-flex justify-content-between align-items-center">
                                 <!--<div class="btn-group">-->
                                 <!--<button type="button" class="btn btn-sm btn-outline-secondary">View</button>-->
                                 <!--<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>-->
                                 <!--</div>-->
-                                <!--<small class="text-muted">9 mins</small>-->
+                                <small class="text-muted">{{blog.pub_date_pretty}}</small>
                             </div>
+                       <small class="text-muted">{{blog.summary}}</small>
+
                         </div>
                     </div>
                 </div>
