--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Detail BLog </title>
+    <title>Portfolio </title>
 </head>
 <body>
 {{ blog.title }}
